src/objects/fferpcore__CompanySite__c.object
<CustomObject>
    <customHelpPage>fferpcore__CompanySiteHelp</customHelpPage>
    <description>Stores site details for specific companies.</description>
    <fields>
        <fullName>fferpcore__City__c</fullName>
        <description>Company site address city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Company__c</fullName>
        <description>Company to which this company site relates.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Company Sites</relationshipLabel>
        <relationshipName>CompanySites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Country__c</fullName>
        <description>Company site address country.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__PostalCode__c</fullName>
        <description>Company site address postal code.</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__State__c</fullName>
        <description>Company site address state/province.</description>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Street__c</fullName>
        <description>Company site address street.</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Company Site</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>